<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/side_nav_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/dashboard"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/my_dashboard"
            app:showAsAction="always|withText"/>
        <item
            android:id="@+id/post"
            android:icon="@drawable/post_icon"
            android:title="@string/shipper"
            app:showAsAction="always|withText"/>
        <item
            android:id="@+id/search"
            android:icon="@drawable/findloads_icon"
            android:title="@string/carrier"
            app:showAsAction="always|withText"/>
        <item
            android:id="@+id/billlading"
            android:icon="@drawable/billlading_icon"
            android:title="@string/e_bill_of_lading"
            app:showAsAction="always|withText"/>
        <item
            android:id="@+id/resource"
            android:icon="@drawable/resource_icon"
            android:title="@string/resources"
            app:showAsAction="always|withText"/>
        <item
            android:id="@+id/profile"
            android:icon="@drawable/profile_icon"
            android:title="@string/my_account"
            app:showAsAction="always|withText"/>
    </group>
</menu>