<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:paddingBottom="@dimen/list_item_spacing_half"
    android:paddingTop="@dimen/list_item_spacing_half"
    tools:context=".Main.Shipper.VehicleList.CarrierVehicleFilterListDialogFragment"
    android:orientation="vertical"
    android:paddingStart="@dimen/default_margin"
    android:paddingEnd="@dimen/default_margin">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Filter Order List"
        android:textAlignment="center"
        android:layout_marginBottom="@dimen/default_margin"
        android:textColor="@color/black_text_color"
        android:textSize="@dimen/large_font_size"/>

    <ToggleButton
        android:id="@+id/tgFilterOffer"
        android:layout_width="match_parent"
        style="@style/default_btn_style"
        android:textOn="@string/offers_counter_offers"
        android:textOff="@string/vehicle_list_kind_all"
        android:checked="true"
        android:background="@drawable/toggle_background_orange_color" />

    <ToggleButton
        android:id="@+id/tgFilterDispatched"
        android:layout_width="match_parent"
        style="@style/default_btn_style"
        android:textOn="@string/vehicle_list_kind_dispatched"
        android:textOff="@string/vehicle_list_kind_dispatched"
        android:background="@drawable/toggle_background_orange_color"
        />

    <ToggleButton
        android:id="@+id/tgFilterAccepted"
        android:layout_width="match_parent"
        style="@style/default_btn_style"
        android:textOn="@string/vehicle_list_kind_accepted"
        android:textOff="@string/vehicle_list_kind_accepted"
        android:background="@drawable/toggle_background_orange_color"
        />
    <ToggleButton
        android:id="@+id/tgFilterTransit"
        android:layout_width="match_parent"
        style="@style/default_btn_style"
        android:textOn="@string/vehicle_list_kind_in_transit"
        android:textOff="@string/vehicle_list_kind_in_transit"
        android:background="@drawable/toggle_background_orange_color"
        />
    <ToggleButton
        android:id="@+id/tgFilterDelivered"
        android:layout_width="match_parent"
        style="@style/default_btn_style"
        android:textOn="@string/vehicle_list_kind_delivered"
        android:textOff="@string/vehicle_list_kind_delivered"
        android:background="@drawable/toggle_background_orange_color"
        />
    <ToggleButton
        android:id="@+id/tgFilterCompleted"
        android:layout_width="match_parent"
        style="@style/default_btn_style"
        android:textOn="@string/vehicle_list_kind_completed"
        android:textOff="@string/vehicle_list_kind_completed"
        android:background="@drawable/toggle_background_orange_color"
        />
    <ToggleButton
        android:id="@+id/tgFilterCancelled"
        android:layout_width="match_parent"
        style="@style/default_btn_style"
        android:textOn="@string/vehicle_list_kind_canceled"
        android:textOff="@string/vehicle_list_kind_canceled"
        android:background="@drawable/toggle_background_orange_color"
        />
    <ToggleButton
        android:id="@+id/tgFilterArchive"
        android:layout_width="match_parent"
        style="@style/default_btn_style"
        android:textOn="@string/vehicle_list_kind_archieved"
        android:textOff="@string/vehicle_list_kind_archieved"
        android:background="@drawable/toggle_background_orange_color"
        />

</LinearLayout>