<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rock.reliantdispatch.Authority.LoginActivity"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/default_margin">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_gravity="center_horizontal"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/registerTitle"
                    android:layout_marginTop="@dimen/default_margin"
                    android:text="@string/member_login"
                    android:scaleX="1.2"
                    android:textColor="@color/colorAccent"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/registerSubTitle"
                    android:textAlignment="gravity"
                    android:gravity="center"
                    android:lineSpacingMultiplier="1.2"
                    android:layout_marginStart="@dimen/interval_margin"
                    android:layout_marginEnd="@dimen/interval_margin"
                    android:textColor="@color/black_text_color"
                    android:text="@string/login_explain_title"/>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin">
                    <android.support.v7.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:hint="@string/user_name_asterik"
                        style="@style/editTextStyle" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/interval_margin">
                    <android.support.v7.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_asterik"
                        style="@style/editTextStyle"
                        android:inputType="textPassword"/>
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rememer_explain_title"
                    android:textColor="@color/black_text_color"
                    android:lineSpacingMultiplier="1.2"
                    android:layout_marginTop="@dimen/default_margin"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_gravity="center_horizontal">
                    <Button
                        android:id="@+id/login"
                        style="@style/default_btn_style"
                        android:layout_weight="1"
                        android:text="@string/login"
                        android:background="@drawable/btn_background_red_color"/>
                    <Button
                        android:id="@+id/forgotPassword"
                        style="@style/default_btn_style"
                        android:layout_weight="1"
                        android:text="@string/forgot_password"
                        android:background="@drawable/btn_background_blue_color"
                        android:layout_marginStart="@dimen/default_margin"/>
                </LinearLayout>
                <Button
                    android:id="@+id/signUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/linkButton"
                    android:layout_marginTop="@dimen/interval_margin"
                    android:text="@string/go_signup" />
        </LinearLayout>
</ScrollView>
