<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            style="@style/customInfoStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Terminal" />
        <TextView
            style="@style/customInfoStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name" />
        <TextView
            style="@style/customInfoStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Contact Name" />
        <TextView
            style="@style/customInfoStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address1" />
        <TextView
            style="@style/customInfoStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address2" />
        <TextView
            style="@style/customInfoStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="City, State, ZIP" />

        <TextView
            style="@style/customInfoStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Metro Area"
            android:textStyle="bold" />
        <TextView
            style="@style/customInfoStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Phone # 1" />
        <TextView
            style="@style/customInfoStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Phone # 2" />
        <TextView
            style="@style/customInfoStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cell phone" />
    </LinearLayout>
</FrameLayout>